<resources>
    <string name="app_name">微工单</string>
    <string name="login_title">欢迎使用微工单系统</string>
    <string name="welcome_name">欢迎</string>

    <!-- 系统 -->
    <string name="system_exit_title">系统提示</string>
    <string name="system_exit_message">确定要退出吗?</string>
    <string name="system_logout_title">注销提示</string>
    <string name="system_logout_message">确定要注销吗?</string>
    <string name="system_require_permission">请开通相关权限，否则无法正常使用本应用！</string>
    <string name="system_parse_error">解析错误</string>
    <string name="system_voice_content">语音内容:</string>

    <!-- 程序 -->
    <string name="version">版本号：1.1.B250108</string>
    <string name="compAddr">时代科技有限公司</string>

    <!-- 通用 -->
    <string name="OK">确定</string>
    <string name="Prompt">提示</string>
    <string name="save">保存</string>
    <string name="saving">保存</string>
    <string name="Return">返回</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="intValues">0123456789</string>
    <string name="doubleValues">0123456789.</string>
    <string name="remarks">备注</string>
    <string name="confirmDelete">确认要删除吗？</string>
    <string name="deleting">正在删除</string>
    <string name="add">添加</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="Cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="select">选择</string>
    <string name="clear">清空</string>
    <string name="next">下一步</string>
    <string name="parameterError">参数错误</string>
    <string name="setting">设定</string>
    <string name="more">更多</string>
    <string name="parameter_error">参数错误</string>
    <string name="url_error">网络地址不允许为空</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="download_file_failure">下载文件失败</string>
    <string name="download_file_unknown_file_size">未能获取文件大小</string>
    <string name="system_exception_exit">程序出错，即将退出:</string>

    <!-- 日期时间 -->
    <string name="exp_date_out_area">日期超出有效范围</string>

    <!-- 日期时间对话框 -->
    <string name="timeSelect">时间</string>
    <string name="dateSelect">日期</string>
    <string name="now">现在</string>
    <string name="text_year">年</string>
    <string name="text_month">月</string>
    <string name="text_day">日</string>
    <string name="text_hour">时</string>
    <string name="text_min">分</string>

    <!-- 查询 -->
    <string name="query">查询:</string>
    <string name="query_keyword_prompt">请输入查询关键字</string>
    <string name="start_date">开始日期:</string>
    <string name="end_date">结束日期:</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="loading_data">正在加载数据</string>
    <string name="no_data_find">未发现满足条件数据</string>
    <string name="server_return_nothing">服务器未返回任何数据</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_input_user_id">请输入帐号</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_change_password">修改密码</string>
    <string name="logining">正在登录,请稍候</string>
    <string name="login_welcome">欢迎您 </string>
    <string name="defaultUserName">wo_manager</string>
    <string name="defaultUserPasswd">admin</string>

    <string name="access_loading">正在获取功能权限</string>
    <string name="access_refresh">刷新</string>
    <string name="access_logout">注销</string>
    <string name="welcome_operate_undefined">未知的操作</string>
    <string name="welcome_undefined_func_code">未定义的功能码</string>

    <!-- 工单 -->
    <string name="work_order">工单</string>
    <string name="work_order_title">标题:</string>
    <string name="work_order_content">内容:</string>
    <string name="work_order_startTime">开始时间:</string>
    <string name="work_order_endTime">结束时间:</string>
    <string name="work_order_cate">类别:</string>
    <string name="work_order_level">紧急度:</string>
    <string name="work_order_btnUploadImages">上传图片:</string>

    <string name="work_order_edit">编辑工单</string>

    <string name="work_order_staff">工单员工</string>
    <string name="work_order_staff_name">姓名:</string>
    <string name="work_order_staff_progress">进度:</string>
    <string name="work_order_staff_progress_waiting">未开始</string>
    <string name="work_order_staff_progress_completed">已完成</string>

    <string name="work_order_staff_add">添加员工</string>
    <string name="work_order_staff_my">我到工单</string>
    <string name="work_order_staff_modify_progress">修改进度</string>
    <string name="work_order_staff_modify_complete">完成</string>
    <string name="work_order_staff_modify_complete_confirm">确认完成工单?</string>


    <!-- 异常 -->
    <string name="exp_usernameempty">账号不能为空</string>
    <string name="exp_passwrodempty">密码不能为空</string>
    <string name="exp_login">登录失败</string>
    <string name="exp_notlogin">请先登录客户端</string>

    <string name="except_server_return_nothing">服务器未返回任何数据</string>
    <string name="server_parse_json_exception">解析服务器消息异常</string>
    <string name="exp_no_exist">数据不存在</string>
    <string name="exp_id_null">ID不存在</string>
</resources>