<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        >

        <NumberPicker
            android:id="@+id/number_picker_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:descendantFocusability="blocksDescendants" />

        <TextView
            android:id="@+id/text_view_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_year" />

        <NumberPicker
            android:id="@+id/number_picker_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:descendantFocusability="blocksDescendants" />

        <TextView
            android:id="@+id/text_view_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_month" />

        <NumberPicker
            android:id="@+id/number_picker_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:descendantFocusability="blocksDescendants" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_day" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        >
        <Button
            android:id="@+id/btnCurrent"
            style="@style/title_bar_title_text"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/now"
            />
        <Button
            android:id="@+id/btnConfirm"
            style="@style/title_bar_title_text"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/confirm"
            />
        <Button
            android:id="@+id/btnReturn"
            style="@style/title_bar_title_text"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/Return"
            />
    </LinearLayout>


</LinearLayout>