<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mainfram"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/layContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.54"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-80dp"
                android:layout_gravity="center"
                android:gravity="center" >
                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="128dp"
                    android:src="@drawable/welcome_logo"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/welcome"
                    android:text="@string/login_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login_userid"
                android:gravity="right" >

                <EditText
                    android:id="@+id/txUserName"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/login_input_user_id"
                    android:inputType="textEmailAddress"
                    android:text="@string/defaultUserName"
                    >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login_userpwd"
                android:gravity="right" >

                <EditText
                    android:id="@+id/txUserPassword"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/login_input_user_password"
                    android:inputType="textPassword"
                    android:text="@string/defaultUserPasswd"
                    >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/btn_selector"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/login" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


    <wos.mobile.widget.CustomFab
        android:id="@+id/btnLanguage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/language"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:tint="@android:color/white"
        app:bg_color_pressed="@color/gray"
        android:paddingLeft="2dp"
        android:paddingTop="12dp"
        />
</RelativeLayout>