<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:minHeight="40dip"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.74"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include layout="@layout/title_bar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_title"
                style="@style/cell_lab_text" />

            <EditText
                android:id="@+id/workOrderTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/cell_edit_text"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_content"
                style="@style/cell_lab_text" />

            <EditText
                android:id="@+id/workOrderContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/cell_edit_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_startTime"
                style="@style/cell_lab_text" />

            <TextView
                android:id="@+id/workOrderStartTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/cell_lab_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_endTime"
                style="@style/cell_lab_text" />

            <TextView
                android:id="@+id/workOrderEndTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/cell_lab_text">
                <requestFocus />
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_cate"
                style="@style/cell_lab_text" />

            <Spinner
                android:id="@+id/workOrderCateCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                style="@style/cell_edit_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cell_min_height"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:layout_width="@dimen/item_label_width_edit"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/work_order_level"
                style="@style/cell_lab_text" />

            <Spinner
                android:id="@+id/workOrderLevelCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/cell_edit_text"
                android:inputType="numberDecimal"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnUploadImage"
            style="@style/title_bar_title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/work_order_btnUploadImages"
            />


    </LinearLayout>
</LinearLayout>